Archive2/9b/5ca216fd5f7d11/output
custom version

###################################

main.cpp:19:5: error: no matching function for call to 'validate'
    validate(p);
    ^~~~~~~~
main.cpp:9:6: note: candidate template ignored: substitution failure [with str = <>]: too few template arguments for class template 'restrictedValues'
void validate(restrictedValues<str...>*) {
     ^        ~~~~~~~~~~~~~~~~
1 error generated.
